--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Weather </string>
 
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="api.weather.failed">Unable to fetch the weather for location</string>
 </resources>
