--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="title_activity_splash">SplashActivity</string>
     <string name="api.weather.failed">Unable to fetch the weather for location</string>
+    <string name="choose_location">Choose location</string>
 </resources>
